--- a/Springcloudserverservice/src/main/resources/application.properties
+++ b/Springcloudserverservice/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+server.port=8189
+spring.cloud.config.server.git.uri=https://github.com/chitti402/Springconfigserver/
+management.endpoints.web.exposure.include=*
