--- a/onlineQuizClient1/src/main/resources/application.yml
+++ b/onlineQuizClient1/src/main/resources/application.yml
@@ -7,8 +7,8 @@ eureka:
   instance:
     hostname: localhost
 server:
-  port: 9090
+  port: 9091
 spring:
   application:
-    name: OnlineQuizSerivce
+    name: OnlineQuizClient1
 
